Fix text wrap in shipping calculator

--- a/assets/js/base/components/notice-banner/style.scss
+++ b/assets/js/base/components/notice-banner/style.scss
@@ -22,6 +22,7 @@
 	> .wc-block-components-notice-banner__content {
 		padding-right: $gap;
 		align-self: center;
+		white-space: normal;
 
 		&:last-child {
 			padding-right: 0;
